# SZU_Course

./: README.md  加位申请表.doc
BE_电路分析实验/2024电路分析实验课资料/: 深圳大学实验报告模板.docx  电路分析实验课要求.docx
CLSO_化学海洋学/: 第2章-海水的化学组成(学生版).ppt
CLSO_海洋地理信息系统/: 4-海洋数据的获取 .pptx
CLSO_生物化学/上册/: 第10章 核酸通论.ppt  第12章 核酸的物理化学性质.ppt  第14章 核酸的物理化学性质.ppt  第15章 核酸的研究方法.ppt  第1章ppt1_生化课程简介.ppt  第1章ppt2_生化1绪论.ppt  第3章 脂质.ppt  第4章 氨基酸.ppt
CLSO_生物化学/下册/: 12-13-核酸降解和核苷酸代谢.pptx  (+6 more)
CLSO_系统生物学与组学大数据/: 2.3 聚类与分类.pptx  2.4 组学分析常用统计方法.pptx
CSSE_SQL/: 大作业的要求.docx
CSSE_UML/: README.md
CSSE_中间件技术/: 中间件知识点大全.docx
CSSE_中间件技术/实验4/Ex4/cpp/: CMakeLists.txt  Demo.cpp  jni_Demo.h
CSSE_数字电路/: 实验1 门电路逻辑功能与测试.docx  实验2 译码器功能测试与应用.docx  实验3 数据选择器.docx  实验4 集成触发器功能测试及转换.docx  实验5 彩灯流水电路的设计.docx  实验6 555计时器构成单稳态触发器.docx
CSSE_智能物联网/: 1.应用概述&相关技术问题.docx  2.相关技术分析及国内外研究现状.docx  3.系统建模.docx  4.算法设计&实验.docx  5.总结与展望.docx  轨迹可视化小实验报告.docx
CSSE_算法设计与分析/: README.md
CSSE_计算机系统3/: hello.s
CSSE_计算机网络/: 第三章作业.docx  第二章作业.docx  第四章作业.docx
CSSE_软件体系结构与设计模式/: 软件体系结构知识点.docx
CSSE_软件工程/: 软件工程实验报告模板.doc
HITSZ_环境策论/: Air_Data.xlsx
ISIM_数据结构/: ArrStack.cpp  BF.cpp  BinaryTree.cpp  DFS.cpp  Huffman.cpp  KMP.cpp  LinkList.cpp  LinkQueue.cpp  LinkStack.cpp  Prim.cpp  README.md  SeqList.cpp  SeqQueue.cpp  SeqStack.cpp  SparseMatrix_Orthogonal.cpp  SparseMatrix_Triplet.cpp  ThreadTree.cpp
ISIM_计算机网络/: README.md  pingclient.c  server.c
大学物理实验(1)/: 光敏电阻基本特性测量.docx  准稳态法测比热导热系数.doc  基于Multisim的电源设计.docx  多普勒效应测声速.doc  杨氏模量的测量.doc  磁特性综合实验.doc  等厚干涉.doc  薄透镜实验.doc  费米狄拉克分布.doc
大学计算机历年试卷/: 2020A卷答案.docx
转专业高数/: 密码.txt
(+523 files in other folders)
